<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/billTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/billTotal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputBillNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:ems="10"
        android:hint="@string/inputBillNumber"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/billTotal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/billTotal"
        android:backgroundTint="@color/underline"
        app:layout_constraintTop_toTopOf="@+id/billTotal" />

    <TextView
        android:id="@+id/tipText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/tipText"
        app:layout_constraintStart_toStartOf="@+id/billTotal"
        app:layout_constraintTop_toBottomOf="@+id/billTotal" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/inputBillNumber"
        app:layout_constraintTop_toBottomOf="@+id/inputBillNumber">

        <RadioButton
            android:id="@+id/tenPercent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/underline"
            android:text="@string/tenPercent" />

        <RadioButton
            android:id="@+id/fifteenPercent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/underline"
            android:text="@string/fifteenPercent" />

        <RadioButton
            android:id="@+id/eighteenPercent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/underline"
            android:text="@string/eighteenPercent" />

        <RadioButton
            android:id="@+id/custom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/underline"
            android:text="@string/custom" />
    </RadioGroup>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:max="100"
        android:min="0"
        android:progress="1"
        android:progressBackgroundTint="@color/underline"
        android:progressTint="@color/underline"
        android:thumbTint="@color/underline"
        app:layout_constraintEnd_toEndOf="@+id/inputBillNumber"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/custromText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/custom"
        app:layout_constraintStart_toStartOf="@+id/tipText"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/progressText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/tipTextValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/tipTextValue"
        app:layout_constraintStart_toStartOf="@+id/custromText"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <TextView
        android:id="@+id/tipValeResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@+id/seekBar"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <TextView
        android:id="@+id/totalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/total"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipTextValue" />

    <TextView
        android:id="@+id/totalValueResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@+id/tipValeResult"
        app:layout_constraintTop_toBottomOf="@+id/tipValeResult" />

    <Button
        android:id="@+id/exit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalValueResult" />
</androidx.constraintlayout.widget.ConstraintLayout>